--- a/src/Hero.css
+++ b/src/Hero.css
@@ -7,8 +7,15 @@ section.hero {
     
     color: white;
 }
+.hero > .image-container{
+    display: flex;
+    position: relative;
+    top: 0%;
+    width: 100%;
+    height: 100%;
 
-.hero > img {
+}
+.hero .image-container img {
     display: flex;
     position: relative;
     top: 0%;
@@ -218,4 +225,49 @@ section.contact-location-details {
         transform: translate(-50%);
     }
 
+}
+
+
+@media (50.5rem < width < 90rem) {
+    section.hero {      
+        height: 60vh;
+    }
+
+    .hero-headers > h1 {
+        font-size: clamp(3.375rem, -0.408rem + 7.472vi, 6.313rem);
+        font-weight: 800;
+        line-height: normal;
+
+        margin: 0;
+        letter-spacing: 2px;
+        line-height: auto;
+    }
+
+    .hero-headers h2 {
+        display: flex;
+        line-height: normal;
+        align-items: center;
+        font-size: clamp(2.625rem, 0.331rem + 4.531vi, 4.406rem);
+        /* font-size: 42px÷; */
+        
+        
+    }
+
+    .hero-headers h2 i {
+        font-size: 42px;
+
+       
+
+    }
+
+    .hero > .image-container{ 
+        overflow: clip;
+    }
+
+    .hero .image-container img {
+        /* width: ; */
+        /* height: ; */
+    }
+
+    
 }
