--- a/src/BottlesAndCans.css
+++ b/src/BottlesAndCans.css
@@ -6,7 +6,7 @@
     height: 100%;
     min-height: 70vh;
 
-    background-color: rgb(159, 159, 159);
+    background-color: rgb(21, 21, 21);
     padding-inline: 10%;
 
 }
@@ -24,4 +24,10 @@
 .bottles-and-drinks-container .image-container > img {
     object-fit: cover;
     width: 100%;
+}
+
+@media (50.5rem < width < 90rem) { 
+    .bottles-and-drinks-container .image-container {
+        width: 100%;
+    }
 }
