--- a/src/Footer.css
+++ b/src/Footer.css
@@ -80,3 +80,19 @@
     color: hsl(353, 94%, 59%);
     margin-inline: 5px;
 }
+
+@media (50.5rem < width < 90rem) {
+    .footer address span {
+        font-size: 18px;
+    }
+
+    .social-list {
+        margin-block-end: 3vh;
+    }
+
+    .social-icon {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+    }
+}
