--- a/src/LiveMusic.css
+++ b/src/LiveMusic.css
@@ -9,8 +9,9 @@
     height: 100%;
     min-height: 70vh;
 
-    background-color: rgb(159, 159, 159);
-    padding-inline: 10%;
+    background-color: rgb(21, 21, 21);
+    /* background-color: rgb(159, 159, 159); */
+    /* padding-inline: 10%; */
 }
 
 .live-music-section {
@@ -20,11 +21,13 @@
     align-items: center;
     width: 100%;
     padding-block: 5vh;
+    height: fit-content;
 }
 
 
 .live-music-section .live-music-info-container {
     display: flex;
+    position: relative;
     width: 30%;
     /* margin-inline-end: 20%; */
     padding-block: 20px;
@@ -34,12 +37,31 @@
     
     border: 4px double white;
     color: white;
+    background-color: none;
     background-color: black;
     border-radius: 2px;
-    max-width: 386px;
+    max-width: 373.033px;
+    height: 100%;
 
     font-family: 'Bitter', sans-serif;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+
 }
+.live-music-section .live-music-info-container::before {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    width: 99%;
+    height: 1px;
+    z-index: 5;
+    pointer-events: none;
+    /* border: 1px solid rgba(255, 255, 255, 0.111); */
+    background-color: #ffffff2e;
+    transform: translateX(-50%);
+    border-radius: 10px;
+}
+
 .live-music-section .live-music-info-container h2 {
     margin: 0;
     font-size: 1rem;
@@ -49,6 +71,7 @@
     padding: 14px 24px;
     /* padding: 17px 24px; */
     border: 5px double black;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
 
 }
 
@@ -56,20 +79,43 @@
     display: flex;
     position: relative;
     justify-content: center;
-    width: 50%;
-    max-width: 638px;
-    margin-inline-end: 20%;
+    /* width: 50%; */
+    width: 852.27px;
+    /* min-width: 852.27px; */
+    /* max-width: 638px; */
+    /* margin-inline-end: 20%; */
 
     aspect-ratio: 568/426;
     border: 4px double white;
     border-radius: 2px;
     overflow: clip;
+    background-color: rgb(47, 47, 47);
+    /* background-color: rgb(47, 47, 47); */
     background-color: black;
 
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+    /* background-color: black; */
 
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    outline: 4px solid rgba(0,0,0,.2);
+    outline-offset: -10px;
 }
+.live-music-section .image-container::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 
+    outline: 4px solid rgba(0,0,0,.2);
+    outline-offset: -7px;
+    box-shadow: inset 0px 0px 5px rgba(0, 0, 0,.5);
+
+    z-index: 5;
+
+    pointer-events: none;
+    
+}
 /* .live-music-section .image-container img {
     width: 100%;
     object-fit: cover;
@@ -92,6 +138,8 @@
     z-index: 1;
     animation: fade-out 1000ms forwards;
     animation-delay: 3000ms;
+    box-shadow: inset 0 0 15px rgba(0,0,0,0.6); /* Add shadow here */
+
     /* animation-iteration-count: infinite; */
 }
 
@@ -109,7 +157,70 @@
 /* opacity change  */
 /* Solid opacity -> Opacity decrease (curr) 
 -> [push next to curr programitically] -> Solid opacity -> Repeat */
+@media (50.5rem < width < 90rem) { 
+/* @media (width < 90rem) {  */
+    .live-music-section {
+        flex-direction: column;
+        width: 72.798395%;
+        padding-inline: 0;
+        max-width: 716.383px;
+        max-width: 650.383px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+        padding-block: 4.2vh;
+        padding: 0;
+        border: 4px double white;
+    }
 
+    .live-music-container {
+        padding-inline: 0;
+        padding-block: 4.2vh;
+
+    }
+
+
+    .live-music-section .image-container {
+        
+        margin-inline-end: 0;
+
+        max-width: none;
+    border-block-end: none;
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
+        min-width: none;
+    box-shadow: none;
+    border: none;
+        width: 100%;
+    }
+
+    .live-music-section .live-music-info-container {
+        max-width:none;
+        max-width: none;
+        border-start-start-radius: 0;
+        border-start-end-radius: 0;
+        border-block-start: none;
+        width: 100%;
+        border: none;
+        padding-block-start: 50px;
+
+    }
+
+    .live-music-section .live-music-info-container h2 {
+        font-size: 1.125rem;
+    }
+
+    .live-music-section .live-music-info-container ul {
+        /* font-size: 1.125rem; */
+        margin-block-start: 8px;
+        margin-block-end: 16px;
+    }
+
+    .live-music-section .live-music-info-container li {
+        font-size: 18px;
+        margin-block-end: 4px;
+    }
+
+
+}
 @keyframes fade-in {
     from {
         opacity: 0;
