--- a/src/MenuMain.css
+++ b/src/MenuMain.css
@@ -6,9 +6,11 @@
     align-items: center;
     width: 100%;
     /* height: ; */
-    background-color: rgb(159, 159, 159);
+    background-color: rgb(21, 21, 21);
+    /* background-color: rgb(159, 159, 159); */
     color: white;
     font-family: 'Bitter', sans-serif;
+    padding-bottom: 19.92px;
 }
 
 .menu-main > h2 {
@@ -27,8 +29,10 @@
     /* height: max-content; */
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr; 
-    /* grid-auto-flow: dense; */
+    grid-auto-flow: dense;
     grid-gap: 2%;
+    padding-inline-start: 0;
+    /* align-items: start; */
 
 }
 
@@ -41,6 +45,12 @@
     /* overflow: clip; */
     /* grid-row: span 2; */
 
+}
+
+/* 864 */
+
+.menu-list-item.tall {
+    grid-row: span 2;
 }
 
 
@@ -59,30 +69,35 @@
     /* margin-block-end: 20px; */
 }
 
-.menu-item > i {
+/* .menu-item > i {
     display: inline-flex;
     position: absolute;
     color: white;
     font-size: 1.15rem;
     top: 2.5%;
-    right: 2.5%;
+
+    right: 3.5%;
     z-index: 1;
     font-weight: 700;
     opacity: .88;
 
 
-}
+} */
 .menu-item-image-container {
     box-sizing: border-box;
     display: flex;
     position: relative;
     width: 100%;
-    margin-block-end: 15px;
+    margin-block-end: 0;
     border: 5px double white;
     background-color: black;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    /* background-color: rgb(47, 47, 47); */
+    /* box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); */
     border-radius: 2px;
     overflow: clip;
+    border-block-end: none;
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
     /* ; */
     
 }
@@ -118,8 +133,15 @@
     height: inherit;
     padding-block: 17px 16px;
     background-color: black;
-    border: 2px solid white;
+    /* border: 2px solid white; */
+    border: 5px double white;
+    border-block-start: none;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+    
+    /* test rule */
+    padding-inline: 10px;
+    /* test rule */
+
 
     /* box-sizing: border-box;
     display: flex;
@@ -133,39 +155,100 @@
     border: 5px double white;
     border: 2px solid white;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); */
+    /* This property is a point of contention */
+    /* height: max-content; */
+    /* This property is a point of contention */
 
+}
+
+.title-price-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    align-self: flex-start;
+    width: 100%;
+}
+
+.menu-item-contents h2 {
+  padding-block-end: 10px;
+  /* padding-inline: 10px; */
+  color: hsl(353, 94%, 59%);
+  margin-block: 0;
+  /* border: 6px double white; */
+  /* margin-block-end: 12px; */
+  align-self: flex-start;
+}
+
+.price {
+    color: white;
+    font-size: 1.15rem;
+    font-weight: 700;
 
 }
 
 
-
-/*.menu-item-contents h2 {
-    padding-block: 5px;
-    padding-inline: 10px;
-    color: hsl(353, 94%, 59%);;
-    margin-block: 0;  -- Typically a default setting h# --
-    border: 4px double white;
-    margin-block-end: 10px;
-}*/
-.menu-item-contents h2 {
+.menu-item-contents p {
+  padding-block: 0;
+  margin-block: 0;
+  /* padding-inline: 10px; */
+  text-align: start;
+  align-self: flex-start;
+  width: 91%;
+}
+/* .menu-item-contents h2 {
     padding-block: 5px;
     padding-inline: 10px;
     color: hsl(353, 94%, 59%);
-    margin-block: 0;
+    margin-block: 0; */
     /* margin-block-end: 0px; */
-    border: 6px double white;
-    margin-block-end: 12px;
+    /* border: 6px double white;
+    margin-block-end: 12px; */
     /* outline: 1px solid white; */
     /* outline-offset: 2px; */
-}
+/* } */
 
-.menu-item-contents p {
-    /* padding-block: 0; */
-    margin-block:  0;  /* Typically a default setting for p */
+/* .menu-item-contents p {
+    margin-block:  0;  
     padding-inline: 10px;
     text-align: center;
 
+} */
+
+  /* opacity: 0.95; */
+@media (50.5rem < width < 90rem) { 
+    .menu-list {
+        width: 87%;
+        padding: 0;
+    }  
+
+    .menu-item-contents h2 {
+        text-align: left;
+        font-size: 22px;
+        max-width: 78%;
+        padding: 0;
+        padding-block-end: 10px;
+    }
+
+    /* .menu-item > i {
+        font-size: clamp(1.15rem, 0.86rem + 0.572vw, 1.375rem);
+        top: 2.5%;
+        right: 2.5%; */
+        /* right: 3.5%; */
+        /* opacity: 0.95;
+    } */
+
+    .price {
+        color: white;
+        font-size: 1.15rem;
+        font-weight: 500;
+        align-self: flex-start;
+
+    }
 }
+
+
+
 /* .menu-item img {
     border: 2px solid white;
     object-fit: cover;
