changes to mobile header

--- a/src/Header.css
+++ b/src/Header.css
@@ -96,6 +96,7 @@
 @media (width < 50.525em) { 
     .header {
         height: 100px;
+        box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
     }   
     .header-logo {
         width: 125px;
