--- a/src/Hero.css
+++ b/src/Hero.css
@@ -313,6 +313,9 @@ section.contact-location-details {
 
     .hero-headers {
         align-items: flex-start;
+        /* text-align: center; */
+        padding-inline: 5px;
+        padding-block: 12px;
     }
     .hero-headers > h1 {
         font-size: 57px;
@@ -330,7 +333,8 @@ section.contact-location-details {
     }
 
     section.description {
-        height: 40vh;
+        height: 50vh;
+        /* height: 40vh; */
         /* height: 30vh; */
     }
 
@@ -342,7 +346,8 @@ section.contact-location-details {
         text-align: start;
         padding-inline: 4px;
         padding-block: 25px;
-        font-weight: 500;
+        /* font-weight: 500; */
+        font-weight: 400;
         border: none;
         outline: none;
         /* width: 94%;
@@ -357,6 +362,7 @@ section.contact-location-details {
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
+        padding-block-start: 56px;
     }
 
     .contact-location-details .carousel-container {
@@ -372,7 +378,10 @@ section.contact-location-details {
         border: 0;
         outline: 0;
         background-color: rgb(21, 21,21);
-        box-shadow: none
+        box-shadow: none;
+        padding-block: 56px;
+        padding-inline: 8px;
+        box-sizing: border-box;
     }
 
     .location .contact-info > .visit-span, .location .contact-info span,
