--- a/src/Hero.css
+++ b/src/Hero.css
@@ -113,39 +113,62 @@ section.contact-location-details {
     flex-direction: column;
     position: relative;
     justify-content: center;
-    overflow-x: clip;
+    /* overflow-x: clip; */
 
     width: 100%;
     height: 47vh;
 }
 
 .contact-location-details .carousel-container {
-    display: flex;
-    position: absolute;
-    justify-content: flex-start;
+    /* display: flex; */
+    position: relative;
+    /* justify-content: flex-start; */
     align-items: center;
-    overflow: clip;
-
-    width: max-content;
+    overflow: visible;
+    height: 100%; 
+    max-height: 100vw;
+    
+    min-height: 0;
+    min-width: 0;
+    max-width: 100vw; 
+    width: 100%;
+    overflow: hidden;
+    /* max-width: 100vh;
+    max-height: 100v1;
     height: 100%;
-    z-index: -1;
-
-    animation: move-left 70s linear infinite;
+    /* z-index: -1; */
+    /* min-width: 0;
+    min-height: 0; */ 
+    /* animation: move-left 70s linear infinite; */
 }
 
 
+.contact-location-details .swiper-wrapper {
+    /* align-items: center;  */
+    max-height: 100%;
+    height: 100%;
+    display: flex;
+    transition-timing-function: linear !important;
+}
 
 .contact-location-details .carousel-container .carousel-item {
     position: relative;
     width: auto;
-    height: 98%;
+    height: 100%;
+    /* height: 98%; */
+    flex-shrink: 0;
+
     border: 4px solid white;
     border-radius: 2px;
     box-sizing: border-box;
-    margin-inline: 5px;
+    /* margin-inline: 5px; */
     outline: 4px solid rgba(0,0,0,.2);
     outline-offset: -10px;
+    display: block;
+    max-height: 100%;
+
 }
+
 
 .contact-location-details .carousel-container .carousel-item .overlay {
     display: flex;
@@ -156,9 +179,10 @@ section.contact-location-details {
 }
 
 
-.contact-location-details .carousel-container .carousel-item > img {
-    height: 100%;
+.contact-location-details .carousel-container .carousel-item .carousel-img {
+    display: block;
     width: auto;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -184,7 +208,7 @@ section.contact-location-details {
     background-color: black;
     margin-inline-start: 6.5277777777778%;
     box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.65);
-
+    position: absolute;
 }
 
 .location .contact-info {
@@ -281,7 +305,7 @@ section.contact-location-details {
     }
 
     address.location {
-        position: relative;
+        position: absolute;
         left: 50%;
         transform: translateX(-50%);
 
@@ -367,6 +391,7 @@ section.contact-location-details {
 
     .contact-location-details .carousel-container {
         height: 28vh;
+        /* height: 40%; */
         position: relative;
         background-color: rgb(21, 21,21);
         z-index: 0;
@@ -382,6 +407,7 @@ section.contact-location-details {
         padding-block: 56px;
         padding-inline: 8px;
         box-sizing: border-box;
+        position: relative;
     }
 
     .location .contact-info > .visit-span, .location .contact-info span,
