--- a/src/MenuMain.css
+++ b/src/MenuMain.css
@@ -29,9 +29,12 @@
     /* height: max-content; */
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr; 
-    grid-auto-flow: dense;
-    grid-gap: 2%;
+    /* grid-auto-flow: dense; */
+    gap: 2%;
     padding-inline-start: 0;
+    padding-block-end: 2%;
+    height: auto;
+    row-gap: 1.2%;
     /* align-items: start; */
 
 }
@@ -49,9 +52,7 @@
 
 /* 864 */
 
-.menu-list-item.tall {
-    grid-row: span 2;
-}
+
 
 
 .menu-item {
@@ -141,6 +142,7 @@
     /* test rule */
     padding-inline: 10px;
     /* test rule */
+    /* flex: 1; */
 
 
     /* box-sizing: border-box;
@@ -184,6 +186,7 @@
     color: white;
     font-size: 1.15rem;
     font-weight: 700;
+    padding-block-end: 10px;
 
 }
 
@@ -220,6 +223,7 @@
     .menu-list {
         width: 87%;
         padding: 0;
+        gap: 1%;
     }  
 
     .menu-item-contents h2 {
