--- a/src/BottlesAndCans.css
+++ b/src/BottlesAndCans.css
@@ -4,7 +4,7 @@
     align-items: center;
     max-width: 100vw;
     height: 100%;
-    min-height: 70vh;
+    min-height: 70dvh;
 
     background-color: rgb(21, 21, 21);
     padding-inline: 10%;
