--- a/src/Hero.css
+++ b/src/Hero.css
@@ -284,9 +284,6 @@ section.contact-location-details {
 
     .hero-headers h2 i {
         font-size: 42px;
-
-       
-
     }
 
     .hero > .image-container{ 
@@ -390,7 +387,7 @@ section.contact-location-details {
     }
 
     .contact-location-details .carousel-container {
-        height: 28vh;
+        height: 28dvh;
         /* height: 40%; */
         position: relative;
         background-color: rgb(21, 21,21);
