--- a/src/Hero.css
+++ b/src/Hero.css
@@ -329,7 +329,7 @@ section.contact-location-details {
 }
  @media (width < 50.625rem) {
     .hero {
-        height: 83vh;
+        height: 83dvh;
     }
 
     .hero-headers {
@@ -354,7 +354,7 @@ section.contact-location-details {
     }
 
     section.description {
-        height: 50vh;
+        height: 50dvh;
         /* height: 40vh; */
         /* height: 30vh; */
     }
@@ -379,7 +379,7 @@ section.contact-location-details {
 
     section.contact-location-details {
         width: 100%;
-        height: 69vh;
+        height: 69dvh;
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
