--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+html {
+  min-height: --webkit-fill-available;
+}
 body {
 
   margin: 0 auto;
   font-family: "Inter", sans-serif;
   background-color: #000000;
   height: 100%;
+  min-height: 100vh;
+  min-height: --webkit-fill-available;
   /* min-height: 100vh; */
 }
 
