--- a/src/Hero.css
+++ b/src/Hero.css
@@ -329,7 +329,8 @@ section.contact-location-details {
 }
  @media (width < 50.625rem) {
     .hero {
-        height: 83dvh;
+        height: 83vh;
+        /* Aspectg ratio here */
     }
 
     .hero-headers {
@@ -354,7 +355,7 @@ section.contact-location-details {
     }
 
     section.description {
-        height: 50dvh;
+        height: 50vh;
         /* height: 40vh; */
         /* height: 30vh; */
     }
@@ -379,7 +380,7 @@ section.contact-location-details {
 
     section.contact-location-details {
         width: 100%;
-        height: 69dvh;
+        height: 69vh;
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
@@ -387,7 +388,7 @@ section.contact-location-details {
     }
 
     .contact-location-details .carousel-container {
-        height: 28dvh;
+        height: 28vh;
         /* height: 40%; */
         position: relative;
         background-color: rgb(21, 21,21);
