A vh bug fixxxxxxxx

--- a/src/Hero.css
+++ b/src/Hero.css
@@ -330,7 +330,8 @@ section.contact-location-details {
  @media (width < 50.625rem) {
     .hero {
         /* height: 83vh; */
-        height: (var(--vh, 1vh) * 83);
+        height: 83vh;
+        min-height: (var(--vh, 1vh) * 83);
         /* Aspectg ratio here */
     }
 
