--- a/src/Hero.css
+++ b/src/Hero.css
@@ -389,12 +389,14 @@ section.contact-location-details {
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
-        padding-block-start: 56px;
+        /* padding-block-start: 56px; */
+        padding-block-start: 9.5%;
     }
 
     .contact-location-details .carousel-container {
         /* height: 28vh; */
-        height: calc(var(--vh) * 28);
+        /* height: calc(var(--vh) * 28); */
+        height: 38%;
         /* min-height: 224.267px; */
         /* height: 40%; */
         position: relative;
