--- a/src/Hero.css
+++ b/src/Hero.css
@@ -384,35 +384,29 @@ section.contact-location-details {
     section.contact-location-details {
         width: 100%;
         /* height: 69vh; */
-        height: calc(var(--vh) * 58.75);
-        /* height: calc(var(--vh) * 69); */
+        height: calc(var(--vh) * 69);
 
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
         /* padding-block-start: 56px; */
-        /* padding-block-start: 9.5%; */
-        box-sizing: border-box;
-    justify-content: flex-start;
-    padding-block-start: calc(var(--vh) * 4.39);
+        padding-block-start: 9.5%;
     }
 
     .contact-location-details .carousel-container {
         /* height: 28vh; */
         /* height: calc(var(--vh) * 28); */
-        height: 33.290762%;
-        /* height: 38%; */
+        height: 38%;
         min-height: 180px;
         /* min-height: 224.267px; */
         /* height: 40%; */
         position: relative;
         background-color: rgb(21, 21,21);
         z-index: 0;
-        margin-block-end: calc(var(--vh) * 4.39);
     }
 
     address.location {
-        /* width: 100%;
+        width: 100%;
         margin-inline: 0;
         border: 0;
         outline: 0;
@@ -421,19 +415,7 @@ section.contact-location-details {
         padding-block: 56px;
         padding-inline: 8px;
         box-sizing: border-box;
-        position: relative; */
-        width: 100%;
-        margin-inline: 0;
-        border: 0;
-        outline: 0;
-        background-color: rgb(21, 21,21);
-        box-shadow: none;
-        padding-block: 0 55.5516px;
-        padding-inline: 8px;
-        box-sizing: border-box;
         position: relative;
-        height: 51.778836%;
-        justify-content: flex-start;
     }
 
     .location .contact-info > .visit-span, .location .contact-info span,
