--- a/src/Hero.css
+++ b/src/Hero.css
@@ -385,24 +385,27 @@ section.contact-location-details {
         width: 100%;
         /* height: 69vh; */
         height: calc(var(--vh) * 69);
+        height: max-content;
 
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
         /* padding-block-start: 56px; */
         padding-block-start: 9.5%;
+        padding-block-start: calc(var(--vh) * 4.4);
     }
 
     .contact-location-details .carousel-container {
         /* height: 28vh; */
         /* height: calc(var(--vh) * 28); */
-        height: 38%;
-        min-height: 180px;
+        /* height: 38%; */
+        /* min-height: 180px; */
         /* min-height: 224.267px; */
         /* height: 40%; */
         position: relative;
         background-color: rgb(21, 21,21);
         z-index: 0;
+        height: calc(var(--vh) * 26);
     }
 
     address.location {
@@ -416,6 +419,7 @@ section.contact-location-details {
         padding-inline: 8px;
         box-sizing: border-box;
         position: relative;
+        height: calc(var(--vh) * 39.86);
     }
 
     .location .contact-info > .visit-span, .location .contact-info span,
