--- a/src/Hero.css
+++ b/src/Hero.css
@@ -392,7 +392,7 @@ section.contact-location-details {
         background-color: rgb(21, 21,21);
         /* padding-block-start: 56px; */
         padding-block-start: 9.5%;
-        padding-block: calc(var(--vh) * 8.8);
+        padding-block: calc(var(--vh) * 8.8) calc(var(--vh) * 6.6);
     }
 
     .contact-location-details .carousel-container {
