--- a/src/Hero.css
+++ b/src/Hero.css
@@ -405,7 +405,8 @@ section.contact-location-details {
         position: relative;
         background-color: rgb(21, 21,21);
         z-index: 0;
-        height: calc(var(--vh) * 28);
+        height: calc(var(--vh) * 30);
+        /* height: calc(var(--vh) * 28); */
         margin-block-end: calc(var(--vh) * 4.4);
     }
 
