--- a/src/Hero.css
+++ b/src/Hero.css
@@ -390,6 +390,7 @@ section.contact-location-details {
         align-items: revert;
         align-items: center;
         background-color: rgb(21, 21,21);
+        justify-content: flex-start;
         /* padding-block-start: 56px; */
         padding-block-start: 9.5%;
         padding-block: calc(var(--vh) * 8.8) calc(var(--vh) * 6.6);
@@ -417,6 +418,7 @@ section.contact-location-details {
         outline: 0;
         background-color: rgb(21, 21,21);
         box-shadow: none;
+        justify-content: flex-start;
         padding-block: 56px;
         padding-inline: 8px;
         box-sizing: border-box;
