--- a/src/Hero.css
+++ b/src/Hero.css
@@ -394,6 +394,7 @@ section.contact-location-details {
         /* padding-block-start: 56px; */
         padding-block-start: 9.5%;
         padding-block: calc(var(--vh) * 8.8) calc(var(--vh) * 4.4);
+        /* padding-block: calc(var(--vh) * 8.8) calc(var(--vh) * 4.4); */
     }
 
     .contact-location-details .carousel-container {
@@ -407,6 +408,7 @@ section.contact-location-details {
         background-color: rgb(21, 21,21);
         z-index: 0;
         height: calc(var(--vh) * 30);
+        pointer-events: none;
         /* height: calc(var(--vh) * 28); */
         /* margin-block-end: calc(var(--vh) * 4.4); */
     }
@@ -423,7 +425,7 @@ section.contact-location-details {
         box-sizing: border-box;
         position: relative;
         height: max-content;
-        padding-block: calc(var(--vh) * 4.4);
+        padding-block: calc(var(--vh) * 8.8);
     }
 
     .location .contact-info > .visit-span, .location .contact-info span,
