--- a/src/MenuMain.css
+++ b/src/MenuMain.css
@@ -219,7 +219,7 @@
 } */
 
   /* opacity: 0.95; */
-@media (50.5rem < width < 90rem) { 
+@media (50.625rem < width < 90rem) { 
     .menu-list {
         width: 87%;
         padding: 0;
@@ -251,6 +251,34 @@
     }
 }
 
+@media (width < 50.625rem) { 
+    .menu-main {
+        padding-inline: 8px;
+        box-sizing: border-box;
+    }
+
+    .menu-list {
+        display: grid;
+        align-self: center;
+        width: 100%;
+        /* height: max-content; */
+        grid-template-columns: 1fr;
+        grid-auto-rows:max-content;
+        grid-auto-flow: dense;
+        gap: 2%;
+        padding-inline-start: 0;
+        padding-block-end: 2%;
+        height: auto;
+        row-gap: 16px;
+        /* row-gap: 2%; */
+        /* align-items: start; */
+
+    }
+
+    .menu-list-item {
+        height: max-content;
+    }
+}
 
 
 /* .menu-item img {
