--- a/src/LiveMusic.css
+++ b/src/LiveMusic.css
@@ -280,7 +280,7 @@
         width: 100%;
         border: none;
         padding-block-start: 50px;
-        /* padding-block-start: 25px; */
+        padding-block-start: 25px;
 
     }
 
