--- a/src/LiveMusic.css
+++ b/src/LiveMusic.css
@@ -280,7 +280,8 @@
         width: 100%;
         border: none;
         padding-block-start: 50px;
-        padding-block-start: 25px;
+        padding-block-start: calc(2*var(--vh));
+        /* padding-block-start: 25px; */
 
     }
 
