--- a/src/Footer.css
+++ b/src/Footer.css
@@ -81,7 +81,7 @@
     margin-inline: 5px;
 }
 
-@media (50.5rem < width < 90rem) {
+@media (50.625rem <= width < 90rem) {
     .footer address span {
         font-size: 18px;
     }
