--- a/src/MenuMain.css
+++ b/src/MenuMain.css
@@ -219,7 +219,7 @@
 } */
 
   /* opacity: 0.95; */
-@media (50.625rem < width < 90rem) { 
+@media (50.625rem <= width < 90rem) { 
     .menu-list {
         width: 87%;
         padding: 0;
