--- a/src/MenuMain.css
+++ b/src/MenuMain.css
@@ -45,7 +45,8 @@
 .menu-list-item {
     list-style: none;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    background-color: black;
     border: 5px double white;
     box-sizing: border-box;
     border-radius: 2px;
