--- a/src/HeaderTablet.css
+++ b/src/HeaderTablet.css
@@ -33,7 +33,8 @@
 }
 
 .menu-overlay.hidden {
-    display: none;
+    /* display: none; */
+    animation: hide-menu 300ms cubic-bezier(.4,0,.2,1);
 }
 
 .menu-overlay .nav-links {
@@ -52,6 +53,10 @@
 
 
 
+}
+
+.menu-overlay.hidden .nav-links {
+    animation: hide-links 300ms cubic-bezier(.4,0,.2,1) 1;
 }
 
 .header-nav .menu-overlay ul.nav-links li.nav-item{
@@ -73,6 +78,9 @@
     margin-block-start: 37.49vh;
     animation: dispaly-socials 500ms cubic-bezier(.4,0,.2,1) 1;
 
+}
+.menu-overlay.hidden .social-links {
+    animation: hide-socials 300ms cubic-bezier(.4,0,.2,1);
 }
 
 .menu-overlay .social-links .social-list {
@@ -114,6 +122,37 @@
     }
 }
 
+@keyframes hide-menu {
+    from {
+        opacity: 1;
+        background-color: rgb(0, 0, 0);
+        
+        /* z-index: 15; */
+    }
+
+    10% {
+        /* background-color: rgb(159, 159, 159); */
+    }
+
+    /* 97% {
+        background-color: rgb(0, 0, 0);
+
+    } */
+
+    /* 65% {
+        opacity: 1;
+    } */
+
+    to {
+        opacity: 0;
+        /* background-color: rgb(159, 159, 159); */
+        /* display: none; */
+        /* z-index: 11; */
+        pointer-events: none;
+    }
+
+}
+
 @keyframes display-links { 
     from {
         /* transform: translateY(10px); */
@@ -130,6 +169,25 @@
         /* transform: translate(0px); */
         gap: 4vh;
         opacity: 1;
+    }
+}
+
+@keyframes hide-links { 
+    from {
+        /* transform: translateY(10px); */
+        gap: 4vh;
+        opacity: 1;
+    }
+
+    /* 30% {
+        transform: translateY(10px);
+        opacity: 0;
+    } */
+
+    to {
+        /* transform: translate(0px); */
+        gap: 7vh;
+        opacity: 0;
     }
 }
 
@@ -152,6 +210,17 @@
 }
 
 @keyframes display-socials { 
+    from {
+        /* transform: translateY(74px); */
+        opacity: 0;
+    }
+    to {
+        /* transform: translate(0px); */
+        opacity: 1;
+    }
+}
+
+@keyframes hide-socials { 
     from {
         /* transform: translateY(74px); */
         opacity: 0;
