--- a/src/HeaderTablet.css
+++ b/src/HeaderTablet.css
@@ -15,10 +15,10 @@
     color: white;
     /* background-color: rgb(159, 159, 159); */
     background-color: rgb(0, 0, 0);
-    animation: display-menu 500ms cubic-bezier(.4,0,.2,1);
+    /* animation: display-menu 500ms cubic-bezier(.4,0,.2,1); */
     /* animarion */
     z-index: 9;
-    animation-iteration-count: 1;
+    /* animation-iteration-count: 1; */
 
 }
 
@@ -34,7 +34,7 @@
 
 .menu-overlay.hidden {
     /* display: none; */
-    animation: hide-menu 300ms cubic-bezier(.4,0,.2,1);
+    /* animation: hide-menu 300ms cubic-bezier(.4,0,.2,1); */
 }
 
 .menu-overlay .nav-links {
