--- a/src/HeaderTablet.css
+++ b/src/HeaderTablet.css
@@ -27,7 +27,7 @@
     z-index: 9;
     align-self: flex-start;
     margin-block-start: 7.01px;
-    animation: display-logo 500ms cubic-bezier(.4,0,.2,1);
+    /* animation: display-logo 500ms cubic-bezier(.4,0,.2,1); */
 
 
 }
@@ -48,7 +48,7 @@
     margin-block-start: 25.185185vh;
     /* margin-block-start: 272px; */
     gap: 4vh;
-    animation: display-links 500ms cubic-bezier(.4,0,.2,1) 1;
+    /* animation: display-links 500ms cubic-bezier(.4,0,.2,1) 1; */
 
 
 
@@ -56,7 +56,7 @@
 }
 
 .menu-overlay.hidden .nav-links {
-    animation: hide-links 300ms cubic-bezier(.4,0,.2,1) 1;
+    /* animation: hide-links 300ms cubic-bezier(.4,0,.2,1) 1; */
 }
 
 .header-nav .menu-overlay ul.nav-links li.nav-item{
@@ -76,11 +76,11 @@
 .menu-overlay .social-links {
     /* margin-block-start: 40vh; */
     margin-block-start: 37.49vh;
-    animation: dispaly-socials 500ms cubic-bezier(.4,0,.2,1) 1;
+    /* animation: dispaly-socials 500ms cubic-bezier(.4,0,.2,1) 1; */
 
 }
 .menu-overlay.hidden .social-links {
-    animation: hide-socials 300ms cubic-bezier(.4,0,.2,1);
+    /* animation: hide-socials 300ms cubic-bezier(.4,0,.2,1); */
 }
 
 .menu-overlay .social-links .social-list {
