--- a/src/MenuMain.css
+++ b/src/MenuMain.css
@@ -228,6 +228,41 @@
 } */
 
   /* opacity: 0.95; */
+
+.skeleton-loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .3); /* A dark gray for the base */
+    overflow: hidden;
+    aspect-ratio: 403.083/269.383;
+    object-fit: cover;
+    /* z-index: 5; */
+}
+
+/* The shimmer effect */
+.skeleton-loader::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -150%;
+    width: 150%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.08), transparent);
+    animation: shimmer 5s infinite;
+}
+
+@keyframes shimmer {
+    0% {
+        left: -150%;
+    }
+    100% {
+        left: 150%;
+    }
+}
+
 @media (50.625rem <= width < 90rem) { 
     .menu-main {
         /* padding-inline: 24px; */
