--- a/src/BottlesAndCans.css
+++ b/src/BottlesAndCans.css
@@ -19,6 +19,8 @@
     width: 70%;
     max-width: 980px;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    aspect-ratio: 980/560;
 }
 
 .bottles-and-drinks-container .image-container > img {
