--- a/src/Hero.css
+++ b/src/Hero.css
@@ -133,6 +133,7 @@ section.contact-location-details {
     max-width: 100vw; 
     width: 100%;
     overflow: hidden;
+    pointer-events: none;
     /* max-width: 100vh;
     max-height: 100v1;
     height: 100%;
