--- a/src/LiveMusic.css
+++ b/src/LiveMusic.css
@@ -48,6 +48,8 @@
     border-inline-start: none;
     border-start-start-radius: 0;
     border-end-start-radius: 0;
+    box-sizing: border-box;
+    height: 647.2px;
 
 }
 .live-music-section .live-music-info-container::before {
@@ -133,6 +135,7 @@
 .live-music-container .image-container .currGallery, 
 .live-music-container .image-container .nextGallery {
     display: flex;
+    position: relative;
     width: 100%;
     object-fit: cover;
     /* z-index: 0; */
@@ -142,8 +145,9 @@
 
 .live-music-container .image-container .currGallery {
     /* opacity: .5; */
-    z-index: 1;
+    z-index: 2;
     animation: fade-out 1000ms forwards;
+    /* animation-delay: 1000ms; */
     animation-delay: 3000ms;
     box-shadow: inset 0 0 15px rgba(0,0,0,0.6); /* Add shadow here */
 
@@ -154,6 +158,7 @@
     position: absolute;
     height: 100%;
     z-index: 0;
+    /* opacity: .5; */
     /* animation: fade-in 1000ms forwards;
     animation-delay: 2000ms; */
     /* animation-iteration-count: infinite; */
@@ -212,6 +217,7 @@
         width: 100%;
         border: none;
         padding-block-start: 50px;
+        height: 100%;
 
     }
 
@@ -281,6 +287,7 @@
         border: none;
         padding-block-start: 50px;
         padding-block-start: calc(2*var(--vh));
+        
         /* padding-block-start: 25px; */
 
     }
