--- a/src/HeaderTablet.css
+++ b/src/HeaderTablet.css
@@ -75,7 +75,7 @@
 
 .menu-overlay .social-links {
     /* margin-block-start: 40vh; */
-    margin-block-start: 37.49vh;
+    margin-block-start: calc(var(--vh) * 37.49);
     /* animation: dispaly-socials 500ms cubic-bezier(.4,0,.2,1) 1; */
 
 }
