--- a/src/BottlesAndCans.css
+++ b/src/BottlesAndCans.css
@@ -28,6 +28,35 @@
     width: 100%;
 }
 
+
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 50;
+}
+
+.bottles-and-drinks-container .image-container.tapped {
+    position: fixed;
+
+    transform: translate(-50%, -50%);
+    width: 99vw; 
+    height: auto;
+    max-height: 90vh;
+    z-index: 100;
+    cursor: zoom-out;
+}
+
+/* Ensure the image inside the tapped container scales correctly */
+.bottles-and-drinks-container .image-container.tapped img {
+    max-height: 90vh;
+    object-fit: contain;
+}
+
 @media (50.625rem <= width < 90rem) { 
     .bottles-and-drinks-container .image-container {
         width: 100%;
@@ -37,9 +66,11 @@
 
 @media (width < 50.625rem) {
     .bottles-and-drinks-container {
-        padding-inline: 16px;
+        padding-inline: 8px;
+        cursor: pointer;
     }
     .bottles-and-drinks-container .image-container {
         width: 100%;
+        border-width: 5px;
     }
 }
