--- a/src/SkeletonLoader.css
+++ b/src/SkeletonLoader.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .3); /* A dark gray for the base */
+    background-color: rgba(21, 21, 21, 0.3); /* A dark gray for the base */
     overflow: hidden;
     object-fit: cover;
 }
