--- a/src/Hero.css
+++ b/src/Hero.css
@@ -134,6 +134,8 @@ section.contact-location-details {
     width: 100%;
     overflow: hidden;
     pointer-events: none;
+
+    z-index: 0;
     /* max-width: 100vh;
     max-height: 100v1;
     height: 100%;
