--- a/src/Hero.css
+++ b/src/Hero.css
@@ -125,6 +125,7 @@ section.contact-location-details {
     /* justify-content: flex-start; */
     align-items: center;
     overflow: visible;
+    /* height: 200px;  */
     height: 100%; 
     max-height: 100vw;
     
@@ -133,7 +134,7 @@ section.contact-location-details {
     max-width: 100vw; 
     width: 100%;
     overflow: hidden;
-    pointer-events: none;
+    /* pointer-events: none; */
 
     z-index: 0;
     /* max-width: 100vh;
@@ -195,7 +196,7 @@ section.contact-location-details {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: -1;
+    /* z-index: -1; */
 }
 .location {
     display: flex;
