--- a/src/Hero.css
+++ b/src/Hero.css
@@ -133,8 +133,9 @@ section.contact-location-details {
     min-width: 0;
     max-width: 100vw; 
     width: 100%;
-    overflow: hidden;
-    /* pointer-events: none; */
+    /* overflow: hidden; */
+    overflow-y: visible;
+    pointer-events:none;
 
     z-index: 0;
     /* max-width: 100vh;
@@ -172,6 +173,7 @@ section.contact-location-details {
     max-height: 100%;
 
 }
+
 
 
 .contact-location-details .carousel-container .carousel-item .overlay {
