--- a/src/Hero.css
+++ b/src/Hero.css
@@ -133,8 +133,8 @@ section.contact-location-details {
     min-width: 0;
     max-width: 100vw; 
     width: 100%;
-    /* overflow: hidden; */
-    overflow-y: visible;
+    overflow: hidden;
+    /* overflow-y: visible; */
     pointer-events:none;
 
     z-index: 0;
